[gd_scene load_steps=6 format=3 uid="uid://cpx55con1ca2i"]

[ext_resource type="Script" path="res://scripts/ExpandSign.gd" id="1_e5xd4"]
[ext_resource type="Texture2D" uid="uid://cwnw0jso23nnm" path="res://assets/kenney_pixelPlatformer/Tiles/tile_0087.png" id="1_sf215"]
[ext_resource type="PackedScene" uid="uid://dvjpkl6vbqdqw" path="res://scenes/Arrow.tscn" id="3_4cs5c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_epfug"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m3k8s"]

[node name="ExpandSign" type="Node2D" node_paths=PackedStringArray("text_label")]
script = ExtResource("1_e5xd4")
text_label = NodePath("Text")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_sf215")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-37, 0)
scale = Vector2(1, 37.4761)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_epfug")

[node name="Arrow" parent="." instance=ExtResource("3_4cs5c")]

[node name="Text" type="RichTextLabel" parent="."]
visible = false
texture_filter = 1
clip_contents = false
anchors_preset = 10
anchor_right = 1.0
offset_left = -29.0
offset_top = -60.0
offset_right = 25.0
offset_bottom = -12.0
grow_horizontal = 2
bbcode_enabled = true
text = "[img]res://assets/kenney_pixelPlatformer/Text/-.png[/img][img]res://assets/kenney_pixelPlatformer/Text/2.png[/img][img]res://assets/kenney_pixelPlatformer/Text/0.png[/img][img]res://assets/kenney_pixelPlatformer/Text/0.png[/img][img]res://assets/kenney_pixelPlatformer/Text/coin.png[/img]"
fit_content = true
autowrap_mode = 0

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.31, 0.31)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_m3k8s")

[connection signal="area_entered" from="PlayerDetector" to="." method="_on_player_detector_area_entered"]
[connection signal="area_exited" from="PlayerDetector" to="." method="_on_player_detector_area_exited"]
